<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Edit">

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creationView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/colorView"
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/noteDetails"
        android:layout_width="376dp"
        android:layout_height="206dp"
        android:layout_below="@+id/noteTitle"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:ems="10"

        android:hint="@string/note_details"
        android:inputType="textMultiLine"
        android:textAlignment="textStart" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="165dp"
        android:layout_below="@+id/noteDetails"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/latLongView"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationLabel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/feelingView"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/locationLabel"
        android:text="@string/feeling" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/geo_location" />

    <TextView
        android:id="@+id/feeling"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/feelingView" />

    <TextView
        android:id="@+id/updatedLabel"
        android:layout_width="62dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@+id/creationView"
        android:text="@string/updated" />

    <TextView
        android:id="@+id/createdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="43dp"
        android:text="@string/created" />

    <TextView
        android:id="@+id/creationView"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@+id/createdLabel" />

    <TextView
        android:id="@+id/updatedView"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@null"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/updatedLabel" />

    <ImageButton
        android:id="@+id/removeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/locationLabel"
        android:background="@null"
        app:srcCompat="@drawable/ic_close_black_24dp" />


    <ImageButton
        android:id="@+id/removeFeeling"
        android:layout_width="21dp"
        android:layout_height="14dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="31dp"
        android:layout_toRightOf="@+id/feeling"
        android:background="@null"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <ImageView
        android:id="@+id/colorView"
        android:layout_width="12dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:layout_alignParentBottom="true"
        android:layout_marginTop="43dp">

        <VideoView
            android:id="@+id/recordView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/recordBtn"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_mic_black_24dp" />

        <ImageButton
            android:id="@+id/removeRecord"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="182dp"
            android:layout_toRightOf="@+id/recordBtn"
            android:background="@null"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_close_black_dd" />

        <TextView
            android:id="@+id/musicPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

    </FrameLayout>

</RelativeLayout>
